--- a/primer-ejercicio-bootcamp.html
+++ b/primer-ejercicio-bootcamp.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html>
+    <head></head>
     <title>
         Ejercicio de Introducción a HTML en OpenBootcamp
     </title>
+</head>
     <body>
-        <div>
-            <div>
-                <p>Este es mi primer comentario de dos líneas</p>
-            </div>
-            <div>
-                <p>Aprendiendo a documentar mi código con OpenBootcamp</p>
-        </div>
+       <!--Este es mi primer comentario de dos líneas
+
+Aprendiendo a documentar mi código con OpenBootcamp-->
         <div>
             <ul>
                 <li>
-                    <a >
+                    <a href="https://www.youtube.com/watch?v=2uGDCCFmjas&t=7820s">
                         ¿POR QUÉ SOMOS GRATIS? Resolviendo dudas sobre OPENBOOTCAMP en directo.
                     </a>
                 </li>
                 <li>
-                    <a>
+                    <a href="https://www.youtube.com/watch?v=CxwJrzEdw1U">
                         Norway 4K - Scenic Relaxation Film with Calming Music
                     </a>
                 </li>
                 <li>
-                    <a>
+                    <a href="https://www.youtube.com/watch?v=WOaVhrDLVzQ">
                         Leoni Torres - Toda Una Vida (Video Oficial)
                     </a>
 
